--- a/tstyle.css
+++ b/tstyle.css
@@ -12,15 +12,19 @@ body{
     margin:0px;
     display:flex;
     justify-content:space-between;
-   
     align-items:center; 
+    position: sticky;
+    top:0%;
+    background-color: yellowgreen;
 }
+
 .logo img{
-    padding-left:250px;
+    padding-left:150px;
     color: black;
     margin:0px;
     width:100px;
-height:100px;
+height:50px;
+background-color: yellowgreen;
 }
 
 .menu{
@@ -69,9 +73,12 @@ color: black;
     justify-content: center;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight:800;
-font-size: x-large;
+font-size:xx-large;
 padding-top: 30px;
+margin-left: 100px;
+
 }
+
 .main__items{
     padding:50px;
     display:flex;
@@ -79,6 +86,9 @@ padding-top: 30px;
     gap:30px;
     align-content: center;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: lighter;
+}
+.main h1{
     font-weight: lighter;
 }
 .main__search{
@@ -113,8 +123,190 @@ font-size:16px;
     color:black;
     font-weight: bold;
     border: 1px solid black;
+    
+}
+.place-image{ 
+   position:relative; 
+}
+.place-image img{
+    width:75%;
+    height:540px;
+    margin-left: 300px;
+    margin-top:20px;
+    border-radius:15px;
+    border: solid black 1px;
+    padding:0px;  
+}
+.place-image-2025 {
+    width:250%;
+   
+    padding:8px;
+   color:white;
+    position:absolute;
+    top:50%;
+    left:20%;
+
+}
+.place-image--2025{
+    background-color: white;
+    padding:5px;
+    width:150px;
+    position:absolute;
+    top:60%;
+    left:20%;
+    color:black;
+
+}
+.main1{
+    padding:10px;
+    margin-left:250px; 
+    margin-right:50px;
+    
+}
+
+.best{
+    padding:0px;
+    margin-top:60px;
+    
+    
+}
+.best__container{
+    display:flex;
+    flex-wrap: wrap;  
+    justify-content: center;
+    margin-top: 10px;
+}
+
+
+
+.explore{
+    padding:0px;
+    margin-top:60px;
+    
+}
+.explore__container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+
+}
+.inspiration{
+    padding:0px;
+    margin-top:60px;
+}
+.inspiration__container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+
+}
+.things{
+    padding:0px;
+    margin-top:60px;
+    
+}
+.things__container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+    
+
+}
+.nexttrip{
+    padding:0px;
+    margin-top:60px;
+}
+.nexttrip h2,h3{
+    color:rgb(43, 73, 43);
+}
+.nexttrip__container{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+
+
+.course-card{
+  flex-grow: 1;
+    flex-basis:10px;
+    gap:5px;
+    
+}
+.course-card img{
+    width:85%;
+    height:70%;
+}
+.course-card img:hover{
+    opacity:0.3;
+}  
+    
+
+.best__container .course-card{
+    position:relative;
+} 
+.course-card .dine{
+    position:absolute;
+    top:100px;
+    color:black;
+    padding:2px;
+    background-color: white;
+    border:solid black1px;
+    font-weight: bold;
+}
+.nexttrip__container .course-card{
+    position:relative;
+}
+.course-card .next{
+    position:absolute;
+    top:100px;
+    color:black;
+    padding:2px;
+    background-color: white;
+    border:solid black1px;
+    font-weight: bold;
+}
+/*footer image*/
+.place2-image{ 
+   position:relative; 
+}
+.place2-image img{
+    width:100%;
+    height:700px;
+    padding:0px;  
+}
+.place2-image-2025 {
+    width:50%;
+    height:50%;
+   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   font-weight: bolder;
+   font-size :32px;
+    padding:8px;
+   color:white;
+    position:absolute;
+    top:30%;
+    left:5%;
+
+}
+.place2-image--2025{
+    background-color: green;
+    border-radius: 15px;
+    margin-top:10px;
+    padding:10px;
+    width:150px;
+    height:30px;
+    position:absolute;
+    top:62%;
+    left:5%;
+    color:white;
+
 }
 .footer{
+    margin-top:100px;
     background-color: #f2f2f2;
     
 }
@@ -177,14 +369,33 @@ grid-template-columns: repeat(4,1fr);
 }
 .bottom-footer p{
  padding-top:2px;
- font-size: 12px;
+ font-size: 14px;
 }
-.readmore :hover{
-    
-   
-    
-}
+.footer-column p{
+    font-size: 14px;
 
+}
+button{
+    cursor:pointer;
+}
+details{
+    padding:0px;
+}
+summary{
+    cursor:pointer;
+    font-size: 14px;
+    font-weight:bold;
+    display:inline-block;
+}
+summary::after {
+    content: "Read more";
+}
+details[open] summary::after {
+    content: "Read less";
+}
+details{
+    padding:10px;
+}
 
 
 
