--- a/tstyle.css
+++ b/tstyle.css
@@ -16,6 +16,7 @@ body{
     position: sticky;
     top:0%;
     background-color: yellowgreen;
+    z-index: 1;
 }
 
 .logo img{
@@ -131,7 +132,7 @@ font-size:16px;
 .place-image img{
     width:75%;
     height:540px;
-    margin-left: 300px;
+    margin-left:300px;
     margin-top:20px;
     border-radius:15px;
     border: solid black 1px;
@@ -144,7 +145,7 @@ font-size:16px;
    color:white;
     position:absolute;
     top:50%;
-    left:20%;
+    left:25%;
 
 }
 .place-image--2025{
@@ -153,7 +154,7 @@ font-size:16px;
     width:150px;
     position:absolute;
     top:60%;
-    left:20%;
+    left:25%;
     color:black;
 
 }
